beginning js, keyframes created - speed lollipop animation created

--- a/index.html
+++ b/index.html
@@ -28,41 +28,49 @@
           <ellipse cx="210.3" cy="147.3" fill="#EB5A48" transform="rotate(-13.784 210.302 147.308)" rx="80.2" ry="80.2"/>
           <ellipse cx="210.6" cy="146.2" fill="#F48B20" transform="rotate(-13.784 210.586 146.192)" rx="65.4" ry="65.4"/>
           <path id="a" fill="none" d="M167.9 195.7c-27.3-23.6-30.4-64.9-6.8-92.3S226 73 253.4 96.6s30.4 64.9 6.8 92.3-65 30.4-92.3 6.8"/>
-          <text>
-            <textPath xlink:href="#a" startOffset=".494%">
-              <tspan fill="#fff" font-family="'OpenSans'" font-size="7">PARAGRINE FALCON 320 KM/H</tspan>
-            </textPath>
-          </text>
+          <g class="paragrine">
+            <text>
+              <textPath xlink:href="#a" startOffset=".494%">
+                <tspan fill="#fff" font-family="'OpenSans'" font-size="7">PARAGRINE FALCON 320 KM/H</tspan>
+              </textPath>
+            </text>
+          </g>
           <ellipse cx="210.6" cy="146.2" fill="#F0B61C" transform="rotate(-13.784 210.586 146.192)" rx="49.9" ry="49.9"/>
           <path id="b" fill="none" d="M167.2 170.8c-13.6-24-5.2-54.5 18.8-68.1s54.5-5.2 68.1 18.8 5.2 54.5-18.8 68.1c-24 13.6-54.5 5.2-68.1-18.8"/>
+          <g class="needletail">
           <text>
             <textPath xlink:href="#b" startOffset="0%">
               <tspan fill="#fff" font-family="'OpenSans'" font-size="7">WHITE THROATED NEEDLETAIL 170 KM/H</tspan>
             </textPath>
           </text>
+          </g>
           <ellipse cx="210.6" cy="146.2" fill="#F5CA6A" transform="rotate(-13.784 210.586 146.192)" rx="34.1" ry="34.1"/>
           <path id="c" fill="none" d="M177.2 152.8c-3.7-18.5 8.3-36.4 26.8-40.1s36.4 8.3 40.1 26.8c3.7 18.5-8.3 36.4-26.8 40.1-18.5 3.7-36.5-8.3-40.1-26.8"/>
+          <g class="cheetah">
           <text>
             <textPath xlink:href="#c" startOffset="0%">
               <tspan fill="#fff" font-family="'OpenSans'" font-size="7">CHEETAH 120 KM/H</tspan>
             </textPath>
           </text>
+          </g>
           <ellipse cx="210.6" cy="146.2" fill="#EB5A48" transform="rotate(-13.784 210.586 146.192)" rx="19.4" ry="19.4"/>
           <path id="d" fill="none" d="M191.5 149.3c-1.7-10.6 5.5-20.5 16-22.3 10.6-1.7 20.5 5.5 22.3 16 1.7 10.6-5.5 20.5-16 22.3-10.6 1.7-20.6-5.4-22.3-16"/>
+          <g class="shark">
           <text>
             <textPath xlink:href="#d" startOffset="6.8875%">
               <tspan fill="#fff" font-family="'OpenSans'" font-size="7">SHORTFIN MAKO SHARK 50 KM/H</tspan>
             </textPath>
           </text>
+          </g>
           <path fill="#fff" d="M263.59571237 329.5487101l15.6-.08761624.01741092 3.1-15.6.08761625z"/>
-          <text fill="#fff" transform="rotate(89.678 48.43 237.576)" font-family="'OpenSans'" font-size="6.418">
+          <text  class="lollinfo" fill="#fff" transform="rotate(89.678 48.43 237.576)" font-family="'OpenSans'" font-size="6.418">
             24 hour - 286.463 km
           </text>
-          <text fill="#fff" transform="rotate(89.678 5.046 264.453)" font-family="'OpenSans'" font-size="6.418">
+          <text  class="lollinfo" fill="#fff" transform="rotate(89.678 5.046 264.453)" font-family="'OpenSans'" font-size="6.418">
             48 hour - 428.890 km
           </text>
           <path fill="none" d="M196.2458407 142.64349558l50.2-.2819446.11513674 20.5-50.2.2819446z"/>
-          <text fill="#fff" transform="translate(196.266 149.56)" font-family="'OpenSans'" font-size="9">
+          <text  class="lollinfo" fill="#fff" transform="translate(196.266 149.56)" font-family="'OpenSans'" font-size="9">
             Speed
           </text>
         </svg>
@@ -289,7 +297,7 @@
       </svg>
     </div>
   </div>
-  
+
   <script src="https://code.jquery.com/jquery-3.0.0-beta1.min.js"></script>
   <script src="js/main.js"></script>
 </body>
