--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </svg>
       </div>
       <div class="lollipop">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 294.2 337.9" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <svg class="lollipop-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 294.2 337.9" xmlns:xlink="http://www.w3.org/1999/xlink">
           <path fill="#F5CA6A" d="M133.3 166.9c-10.4-42.6 15.6-85.6 58.2-96s83.2 11 96.9 58.2c8.4 28.9 5.2 76.7 5.5 136.5l-16.3.1.4-76.2s-23.8 43.5-77.5 37.2c-53.8-6.2-67.2-59.8-67.2-59.8"/>
           <path fill="#fff" d="M278.19557627 257.9490103l15.9-.0893012.01741092 3.1-15.9.0893012z"/>
           <path fill="#F0B61C" d="M274.1 128.2c8.4 28.9 4.7 149.9 5 209.6l-15.5.1V188.6l10.5-60.4z"/>
