--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </svg>
       </div>
       <div class="lollipop">
-        <svg class="lollipop-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 294.2 337.9" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 294.2 337.9" xmlns:xlink="http://www.w3.org/1999/xlink">
           <path fill="#F5CA6A" d="M133.3 166.9c-10.4-42.6 15.6-85.6 58.2-96s83.2 11 96.9 58.2c8.4 28.9 5.2 76.7 5.5 136.5l-16.3.1.4-76.2s-23.8 43.5-77.5 37.2c-53.8-6.2-67.2-59.8-67.2-59.8"/>
           <path fill="#fff" d="M278.19557627 257.9490103l15.9-.0893012.01741092 3.1-15.9.0893012z"/>
           <path fill="#F0B61C" d="M274.1 128.2c8.4 28.9 4.7 149.9 5 209.6l-15.5.1V188.6l10.5-60.4z"/>
@@ -238,13 +238,13 @@
           <tspan x="0" y="0" fill="#0E3A59" font-family="'Amatic-Bold'" font-size="30.0353">Number Of Living Species Of All </tspan>
           <tspan x="6.4" y="36" fill="#0E3A59" font-family="'Amatic-Bold'" font-size="30.0353">Organisms Currently Known</tspan>
         </text>
-        <path fill="#EB5A48" d="M210.9 157h-33.8c.1-.1.2-.1.3-.2 3.5-2.6 10.5-5.7 16.4-5.6s7.5 1.1 8.8 1.6c3 1 5.7 2.3 8.1 4.1 0-.1.1 0 .2.1z"/>
-        <path fill="#F0B61C" d="M218.1 165.2l-48.4-.1v-.1c1.9-3.2 4.4-5.9 7.3-8 .1-.1.2-.1.3-.2h33.3c.1.1.2.1.3.2 2.9 2.3 5.3 5.1 7.2 8.2z"/>
-        <path fill="#F48B20" d="M222 177.6h-57.1l2.1-6.4c.7-2.1 1.6-4.1 2.7-5.9v-.1l48.4.1v.1c2.2 3.6 3.6 7.8 3.9 12.2zm145.4.2h-4.9l.3-.4c.9-1.2 2.6-1.5 3.8-.6.3.2.6.6.8 1z"/>
-        <path fill="#F5CA6A" d="M220.7 188.3l-2.8 8.8-.1.4-59.2-.1.1-.4 6.2-19.5 57.1.1c.3 3.5-.1 7.1-1.3 10.7zm147-9.3c0 .6-.2 1.1-.5 1.6L355 197.3l-.3.4h-39.9l.4-.4c5.2-4.6 11.9-7 18.6-7 5.5 0 11.1 1.6 15.9 5l12.7-17.5h4.9c.3.3.4.8.4 1.2z"/>
-        <path fill="#EB5A48" d="M217.9 197.1l-.1.4-7.9 24.8v.1l-106.3-.1.1-.1c3.7-2.7 8.3-4.2 13.2-4.2h31.5c1.8 0 3.6.2 5.3.6-.2-3.4.2-6.9 1.3-10.4l3.5-10.8.1-.4 59.3.1zm143.9 25.4s-.1 0 0 0h-65.4l.1-.1 14.4-20.3c1.2-1.7 2.5-3.2 4-4.5l.4-.4h39.8l-.3.4-.7 1c6.1 6.5 8.9 15.3 7.7 23.9z"/>
-        <path fill="#F0B61C" d="M209.9 247.6l-114.8-.1c0-.1-.1-.2-.1-.3-.3-.9-.5-1.8-.6-2.8h-4.1c-1.5 0-2.7-1.2-2.7-2.7 0-1.5 1.2-2.7 2.7-2.7h3.9c.6-6.8 4.1-12.8 9.4-16.6l.1-.1 106.2.1v.1l-1 3.1c-1.7 5.3-4.8 9.8-8.8 13.1 2 1.5 4.1 3.2 6.1 5.3l3.5 3.4.2.2zm151.9-25.1s-.1 0 0 0c-.6 4.4-2.2 8.6-4.9 12.3l-9 12.6-.2.3-64.5-.1v-.3c.5-4.7 2.1-9.3 5-13.4l8.1-11.5.1-.1 65.4.2z"/>
-        <path fill="#F48B20" d="M311.2 278.5c-3 0-6.1-.5-9-1.5.9 2.7 1.3 5.6 1.3 8.6 0 1.8-.2 3.6-.5 5.4 3.2-1.2 6.6-1.8 10-1.8 8.8 0 17.6 4.2 23 11.9l.2.3.1.1-148.1-.2c-.1 0-.2-.1-.3-.1-5.1-1.9-26.1-22.9-26.1-22.9-3.5-4.9-5.2-10.6-5.2-16.2-2.6 1-5.4 1.6-8.4 1.6h-31.5c-6.3 0-12-2.6-16.1-6.7-2.6-2.6-4.6-5.8-5.7-9.5 0-.1-.1-.2-.1-.3l114.6.1.3.3 11.1 11 1.5 2.4c4.1-2.3 8.8-3.6 13.8-3.6h39c3.2 0 6.2.5 9 1.5-1.1-3.6-1.6-7.4-1.2-11.2v-.3l64.7.1-.2.3-13.4 18.9c-5.3 7.7-14 11.8-22.8 11.8z"/>
+        <path class="bubbleone" fill="#EB5A48" d="M210.9 157h-33.8c.1-.1.2-.1.3-.2 3.5-2.6 10.5-5.7 16.4-5.6s7.5 1.1 8.8 1.6c3 1 5.7 2.3 8.1 4.1 0-.1.1 0 .2.1z"/>
+        <path class="bubbletwo" fill="#F0B61C" d="M218.1 165.2l-48.4-.1v-.1c1.9-3.2 4.4-5.9 7.3-8 .1-.1.2-.1.3-.2h33.3c.1.1.2.1.3.2 2.9 2.3 5.3 5.1 7.2 8.2z"/>
+        <path class="bubblethree" fill="#F48B20" d="M222 177.6h-57.1l2.1-6.4c.7-2.1 1.6-4.1 2.7-5.9v-.1l48.4.1v.1c2.2 3.6 3.6 7.8 3.9 12.2zm145.4.2h-4.9l.3-.4c.9-1.2 2.6-1.5 3.8-.6.3.2.6.6.8 1z"/>
+        <path class="bubblefour" fill="#F5CA6A" d="M220.7 188.3l-2.8 8.8-.1.4-59.2-.1.1-.4 6.2-19.5 57.1.1c.3 3.5-.1 7.1-1.3 10.7zm147-9.3c0 .6-.2 1.1-.5 1.6L355 197.3l-.3.4h-39.9l.4-.4c5.2-4.6 11.9-7 18.6-7 5.5 0 11.1 1.6 15.9 5l12.7-17.5h4.9c.3.3.4.8.4 1.2z"/>
+        <path class="bubblefive" fill="#EB5A48" d="M217.9 197.1l-.1.4-7.9 24.8v.1l-106.3-.1.1-.1c3.7-2.7 8.3-4.2 13.2-4.2h31.5c1.8 0 3.6.2 5.3.6-.2-3.4.2-6.9 1.3-10.4l3.5-10.8.1-.4 59.3.1zm143.9 25.4s-.1 0 0 0h-65.4l.1-.1 14.4-20.3c1.2-1.7 2.5-3.2 4-4.5l.4-.4h39.8l-.3.4-.7 1c6.1 6.5 8.9 15.3 7.7 23.9z"/>
+        <path class="bubblesix" fill="#F0B61C" d="M209.9 247.6l-114.8-.1c0-.1-.1-.2-.1-.3-.3-.9-.5-1.8-.6-2.8h-4.1c-1.5 0-2.7-1.2-2.7-2.7 0-1.5 1.2-2.7 2.7-2.7h3.9c.6-6.8 4.1-12.8 9.4-16.6l.1-.1 106.2.1v.1l-1 3.1c-1.7 5.3-4.8 9.8-8.8 13.1 2 1.5 4.1 3.2 6.1 5.3l3.5 3.4.2.2zm151.9-25.1s-.1 0 0 0c-.6 4.4-2.2 8.6-4.9 12.3l-9 12.6-.2.3-64.5-.1v-.3c.5-4.7 2.1-9.3 5-13.4l8.1-11.5.1-.1 65.4.2z"/>
+        <path class="bubbleseven" fill="#F48B20" d="M311.2 278.5c-3 0-6.1-.5-9-1.5.9 2.7 1.3 5.6 1.3 8.6 0 1.8-.2 3.6-.5 5.4 3.2-1.2 6.6-1.8 10-1.8 8.8 0 17.6 4.2 23 11.9l.2.3.1.1-148.1-.2c-.1 0-.2-.1-.3-.1-5.1-1.9-26.1-22.9-26.1-22.9-3.5-4.9-5.2-10.6-5.2-16.2-2.6 1-5.4 1.6-8.4 1.6h-31.5c-6.3 0-12-2.6-16.1-6.7-2.6-2.6-4.6-5.8-5.7-9.5 0-.1-.1-.2-.1-.3l114.6.1.3.3 11.1 11 1.5 2.4c4.1-2.3 8.8-3.6 13.8-3.6h39c3.2 0 6.2.5 9 1.5-1.1-3.6-1.6-7.4-1.2-11.2v-.3l64.7.1-.2.3-13.4 18.9c-5.3 7.7-14 11.8-22.8 11.8z"/>
         <path fill="#F5CA6A" d="M351.8 372.3c-5 3.5-10.6 5.2-16.3 5.2-8.8 0-17.6-4.2-23-11.9l-22.5-32c-4.6-6.5-6.1-14.4-4.6-21.7-3.1 1.2-6.5 1.8-10 1.8H238c2.4 8 1.2 17-4 24.4L211.3 370c-5.5 7.8-14.2 11.9-23.1 11.9-5.6 0-11.3-1.7-16.3-5.2-12.7-9-15.7-26.6-6.7-39.3l22.6-31.8c.9-1.2 1.8-2.4 2.9-3.4-.8-.2-1.6-.5-2.4-.8-.1 0-.2-.1-.3-.1l148.3.2.1.1 22.2 31.5c9 12.6 5.9 30.2-6.8 39.2z"/>
         <path fill="none" d="M29.23081868 414.24887232l.0443409-38.9 92.2.10509592-.0443409 38.9z"/>
         <text transform="translate(29.196 381.344)" font-family="'OpenSans-Light'" font-size="8">
