'head' grouped, attempting to pull forward and fade back

--- a/index.html
+++ b/index.html
@@ -82,21 +82,23 @@
         <path fill="#F8DA9A" d="M419.2 46.6L418 615.8c0 10.1-8.2 18.3-18.3 18.2l-370.5-.4c-10.1 0-18.3-8.2-18.2-18.3l1.2-569.2c0-10.1 8.2-18.3 18.3-18.2l370.5.4c10.1 0 18.2 8.2 18.2 18.3z"/>
         <path fill="none" stroke="#F0B61C" stroke-width=".9432" stroke-miterlimit="10" d="M419.2 46.6L418 615.8c0 10.1-8.2 18.3-18.3 18.2l-370.5-.4c-10.1 0-18.3-8.2-18.2-18.3l1.2-569.2c0-10.1 8.2-18.3 18.3-18.2l370.5.4c10.1 0 18.2 8.2 18.2 18.3z"/>
         <path fill="#86CBD2" d="M56.3 139.8l269.5.3c9.4 0 17.1-7.5 17.1-16.8V77.4c0-9.3-7.6-16.9-17-16.9l-269.6-.3c-9.4 0-17.1 7.5-17.1 16.8v45.9c0 9.3 7.7 16.9 17.1 16.9z"/>
-        <ellipse cx="311.2" cy="95.6" fill="#F48B20" transform="rotate(-18.45 311.18 95.606)" rx="6.9" ry="11.1"/>
-        <ellipse cx="383.2" cy="95.7" fill="#EB5A48" transform="rotate(-71.446 383.243 95.666)" rx="11.1" ry="6.9"/>
-        <path fill="#F5CA6A" d="M347.5 143.3c-5.8.1-11.1-1.8-15.6-5.9l-13.3-12.3S308 74 312.9 64.6s15.9-21.1 34.7-21.2l-.1 99.9z"/>
-        <path fill="#F0B61C" d="M347.2 143.3c5.8.1 11.1-1.8 15.6-5.8l13.3-12.2s10.7-51.1 5.8-60.4c-4.9-9.4-15.9-21.1-34.6-21.2l-.1 99.6z"/>
-        <path fill="#F48B20" d="M357 105.6v7.3h-9.8v-7.3l-.1-23.5h4v23.5"/>
-        <path fill="#EB5A48" d="M347.2 112.9v-7.3"/>
-        <path fill="#F0B61C" d="M343.5 112.9h-6.2v-7.3h6.2V82.1h3.6l.1 30.9"/>
-        <path fill="#F48B20" d="M362.1 137.9v-15.3h-14.9v20.8s4.5.1 8.6-1.5 6.3-4 6.3-4z"/>
-        <path fill="#F0B61C" d="M332.4 137.9v-15.3h14.9v20.8s-4.5.1-8.6-1.6c-4.2-1.6-6.3-3.9-6.3-3.9z"/>
-        <path fill="#EB5A48" d="M361.9 122.6l-14.7.6v-2.9"/>
-        <path fill="#F48B20" d="M332.4 122.6l14.8.5v-2.8"/>
-        <circle cx="329.4" cy="81.3" r="3.1" fill="#fff"/>
-        <circle cx="365.1" cy="81.3" r="3.1" fill="#fff"/>
-        <path fill="#EB5A48" d="M371.5 79.7L357.6 78c-1.7-.2-2.9-1.7-2.7-3.4.2-1.7 1.7-2.9 3.4-2.7l13.9 1.7c1.7.2 2.9 1.7 2.7 3.4-.2 1.7-1.7 2.9-3.4 2.7z"/>
-        <path fill="#F48B20" d="M337.1 77.9l-13.9 1.7c-1.7.2-3.2-1-3.4-2.7-.2-1.7 1-3.2 2.7-3.4l13.9-1.7c1.7-.2 3.2 1 3.4 2.7.2 1.7-1 3.2-2.7 3.4z"/>
+        <g class="head">
+          <ellipse cx="311.2" cy="95.6" fill="#F48B20" transform="rotate(-18.45 311.18 95.606)" rx="6.9" ry="11.1"/>
+          <ellipse cx="383.2" cy="95.7" fill="#EB5A48" transform="rotate(-71.446 383.243 95.666)" rx="11.1" ry="6.9"/>
+          <path fill="#F5CA6A" d="M347.5 143.3c-5.8.1-11.1-1.8-15.6-5.9l-13.3-12.3S308 74 312.9 64.6s15.9-21.1 34.7-21.2l-.1 99.9z"/>
+          <path fill="#F0B61C" d="M347.2 143.3c5.8.1 11.1-1.8 15.6-5.8l13.3-12.2s10.7-51.1 5.8-60.4c-4.9-9.4-15.9-21.1-34.6-21.2l-.1 99.6z"/>
+          <path fill="#F48B20" d="M357 105.6v7.3h-9.8v-7.3l-.1-23.5h4v23.5"/>
+          <path fill="#EB5A48" d="M347.2 112.9v-7.3"/>
+          <path fill="#F0B61C" d="M343.5 112.9h-6.2v-7.3h6.2V82.1h3.6l.1 30.9"/>
+          <path fill="#F48B20" d="M362.1 137.9v-15.3h-14.9v20.8s4.5.1 8.6-1.5 6.3-4 6.3-4z"/>
+          <path fill="#F0B61C" d="M332.4 137.9v-15.3h14.9v20.8s-4.5.1-8.6-1.6c-4.2-1.6-6.3-3.9-6.3-3.9z"/>
+          <path fill="#EB5A48" d="M361.9 122.6l-14.7.6v-2.9"/>
+          <path fill="#F48B20" d="M332.4 122.6l14.8.5v-2.8"/>
+          <circle cx="329.4" cy="81.3" r="3.1" fill="#fff"/>
+          <circle cx="365.1" cy="81.3" r="3.1" fill="#fff"/>
+          <path fill="#EB5A48" d="M371.5 79.7L357.6 78c-1.7-.2-2.9-1.7-2.7-3.4.2-1.7 1.7-2.9 3.4-2.7l13.9 1.7c1.7.2 2.9 1.7 2.7 3.4-.2 1.7-1.7 2.9-3.4 2.7z"/>
+          <path fill="#F48B20" d="M337.1 77.9l-13.9 1.7c-1.7.2-3.2-1-3.4-2.7-.2-1.7 1-3.2 2.7-3.4l13.9-1.7c1.7-.2 3.2 1 3.4 2.7.2 1.7-1 3.2-2.7 3.4z"/>
+        </g>
         <path fill="none" d="M51 68.5h254.1v74.4H51z"/>
         <text transform="translate(51.032 86.846)">
           <tspan x="0" y="0" fill="#fff" font-family="'Amatic-Bold'" font-size="28">Humans VS Animals</tspan>
