--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 
 <body>
+  <h1>
+  </h1>
   <div class="elements">
     <div class="tick-pop">
       <div class="ticket">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 490.7 125">
           <path fill="#EB5A48" d="M490.7 106.9s-10.8 3.4-14.3 7c-3.5 3.7-4.2 10.9-4.2 10.9l-213.9.2-3.9-4.2c-2.3-2.5-5.4-3.7-8.4-3.7-3.1 0-6.2 1.3-8.4 3.8l-3 3.4-213.9.2s1.4-5.3-2.1-9.1c-3.5-3.9-18-9-18-9l9.3-6.4-9.4-6.3 9.3-6.4L.4 81l9.3-6.4-9.4-6.3 9.3-6.4-9.4-6.3 9.3-6.4-9.4-6.3 9.3-6.4L0 30.2 9.4 24 0 17.7s12.6-4.4 17.4-7.9C22.1 6.3 21.1.2 21.1.2L234.9 0s1.2 1.7 2.9 4c2.2 3.1 5.6 4.6 9 4.7 3.6.1 7.2-1.5 9.5-4.7l2.4-3.4L472.6.4c-.1.1-1.8 2.1 2.3 7.4 4.3 5.5 15.3 10.3 15.3 10.3l-9.3 6.4 9.4 6.3-9.3 6.4 9.4 6.3-9.3 6.4 9.4 6.3-9.3 6.4 9.4 6.3-9.3 6.4 9.4 6.3-9.3 6.4 9.4 6.3-9.3 6.4 9.2 6.2z"/>
           <path fill="none" stroke="#F48B20" stroke-width=".9817" stroke-miterlimit="10" d="M480.1 103.6s-10.2 3.1-13.5 6.4c-3.2 3.4-3.9 10-3.9 10H259.3l-3.7-3.9c-2.2-2.3-4.9-4.3-7.8-4.3-2.9 0-8 1.6-10.1 3.9l-2.8 3.1-201.5.5s1.2-4.9-2.2-8.4c-3.4-3.6-17.3-8.3-17.3-8.3l8.8-5.9-9-5.8 8.7-5.9-9-5.8 8.8-5.9-9-5.8 8.8-5.9-9-5.8 8.8-5.9-9-5.8 8.8-5.9-9-5.8 8.7-5.9-9-5.8s11.9-4 16.4-7.3c4.4-3.2 3.4-8.8 3.4-8.8h203.4s1.2 1.6 2.8 3.7c2.2 2.8 5.1 5.2 8.4 5.3 3.4.1 8-2.1 10.1-5.1l2.3-3.1 202.4-.3c-.1.1-1.7 2 2.3 6.8 4.2 5 14.7 9.5 14.7 9.5l-8.8 5.9 9 5.8-8.8 5.9 9 5.8-8.8 5.9 9 5.8-8.8 5.9 9 5.8-8.8 5.9 9 5.8-8.8 5.9 9 5.8-8.8 5.9 9.2 6.1z"/>
-          <text fill="#fff" transform="translate(83.954 80.912)" font-family="'Amatic-Bold'" font-size="60">
+          <text fill="#fff" transform="translate(83.954 80.912)" font-family="'Amatic-Bold', monospace" font-size="60">
             What’s the Difference?
           </text>
         </svg>
